# SoftwareRasterization

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: DepthStencilBuffer.cpp.7086F02C7568BC24.idx  DepthStencilBuffer.cpp.BC445E29D59B9F9A.idx  DepthStencilBuffer.h.8357AA07EA66D5FB.idx  DepthStencilBuffer.h.A5E6113DC3801582.idx  DrawLibrary.cpp.84E6F6ED70935A18.idx  DrawLibrary.cpp.852F0D7F312ABA03.idx  DrawLibrary.cpp.AF3A1FDCB2C86521.idx  DrawLibrary.h.24A4EEE41808CEE3.idx  DrawLibrary.h.4D2587DAD0FC8DA2.idx  DrawLibrary.h.5ED2566081AC0CAF.idx  MathLibrary.cpp.098236ED83F24B70.idx  MathLibrary.cpp.2D0EB1C933BD0451.idx  MathLibrary.cpp.98C0C8056197FB25.idx  MathLibrary.h.A79ABBC4260CCE9F.idx  MathLibrary.h.AEAFA96139C57C96.idx  MathLibrary.h.BD5ECFED3CAE0C8A.idx  Matrix4X4.cpp.4DD52F5E262F013F.idx  Matrix4X4.cpp.FDC151FB5C973C07.idx  Matrix4X4.h.092A49A222B72B20.idx  Matrix4X4.h.279F907D10273E0B.idx  RenderBuffer.cpp.B82CCF5325452856.idx  RenderBuffer.cpp.B8CDA1D2A7927A2E.idx  RenderBuffer.h.83B320112E6E741F.idx  RenderBuffer.h.9AEAD51E6BCD187F.idx  RenderTargetBuffer.cpp.A49242AB4A8105FB.idx  RenderTargetBuffer.cpp.DFEF45FF436061B2.idx  RenderTargetBuffer.h.180D254656231327.idx  RenderTargetBuffer.h.FD9E653C49F2ACA3.idx  Vector.cpp.C5D83C9A8BAF6299.idx  Vector.h.174C23AFA5058B04.idx  Vector2.cpp.444F2355C920A7E0.idx  Vector2.h.2C58258A421FD82F.idx  (+21 more)
src/: CMakeLists.txt  main.cpp
src/math/: MathLibrary.cpp  MathLibrary.h
src/render/: DepthStencilBuffer.cpp  DepthStencilBuffer.h  DrawLibrary.cpp  DrawLibrary.h  RenderTargetBuffer.cpp  RenderTargetBuffer.h
